--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,19 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "target": "ES2024",
-    "strictNullChecks": true,
-    "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./",
-    "baseUrl": "./",
-    "skipLibCheck": true,
-    "incremental": true
-  }
+    "rootDir": ".",                // vorher: "./src" → wichtig!
+    "baseUrl": "."                 // optional, hilft bei Pfadangaben
+  },
+  "include": ["src", "prisma"],
+  "exclude": ["node_modules"]
 }
