--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,7 +29,8 @@
     "express": "^5.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "~0.2.2"
+    "reflect-metadata": "~0.2.2",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -40,10 +41,12 @@
     "@types/node": "^24.0.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
+    "dotenv": "^17.2.1",
     "jest": "^30.0.3",
     "prisma": "^6.10.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
