--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,15 +14,18 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
+    "@duffel/api": "^4.20.1",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
-    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/passport": "^11.0.5",
+    "@nestjs/passport": "^11",
     "@nestjs/platform-express": "^11.1.3",
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.18.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bullmq": "^5.61.0",
@@ -31,24 +34,29 @@
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "~0.2.2",
+    "rxjs": "^7.8.2",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.7",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.7",
+    "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.1",
     "jest": "^30.0.3",
-    "prisma": "^6.10.1",
+    "prisma": "^6.18.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
